--- a/SevenGame/MainWindow.xaml
+++ b/SevenGame/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SevenGame"
         mc:Ignorable="d"
-        Title="SevenGame" Height="350" Width="525">
+        Title="SevenGame" Height="350" Width="525" Icon="/Sources/favicon.ico" >
     <Grid>
-        
+        <Canvas x:Name="Carrier" HorizontalAlignment="Left" Height="319" VerticalAlignment="Top" Width="517" Background="Silver" MouseLeftButtonDown="Carrier_MouseLeftButtonDown"/>
+
     </Grid>
 </Window>
